--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -15,6 +15,13 @@ body {
 }
 
 /* users*/
+.users-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 100px;
+}
+
 .users {
     margin-top: 50px;
     margin-left: auto;
@@ -72,7 +79,7 @@ body {
     right: 0;
     top: 0;
     bottom: 0;
-    outline: 2px solid var(--yellow);
+    outline: 2px solid green;
 }
 
 .user__cell {
@@ -133,16 +140,18 @@ body {
     align-items: center;
 }
 
-.btn-edit:hover,
-.btn-save:hover,
-.btn-add:hover {
-    filter: var(--royalblue-filter);
-}
-
 .btn-delete:hover {
     filter: var(--red-filter);
 }
 
 .btn-add {
-    margin-top: 10px;
+    margin-top: 20px;
+}
+.btn-add:hover {
+    filter: var(--green-filter);
+}
+
+.btn-save:hover,
+.btn-edit:hover {
+    filter: var(--royalblue-filter);
 }
