--- a/src/css/svgIcons.css
+++ b/src/css/svgIcons.css
@@ -4,4 +4,10 @@
 
     --royalblue-filter: brightness(0) saturate(100%) invert(33%) sepia(64%)
         saturate(1371%) hue-rotate(203deg) brightness(100%) contrast(92%);
+
+    --success-filter: brightness(0) saturate(100%) invert(91%) sepia(15%)
+        saturate(957%) hue-rotate(51deg) brightness(101%) contrast(93%);
+
+    --green-filter: brightness(0) saturate(100%) invert(78%) sepia(52%)
+        saturate(512%) hue-rotate(53deg) brightness(95%) contrast(103%);
 }
