--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,14 +1,20 @@
 :root {
-    --cell-width: 150px;
     --cell-padding: 10px;
     --yellow: #ffa800;
     --secondary: #928f94;
+    --secondary-lighter: #c4c4c4;
+    --secondary-super-light: #e5e5e5;
+    --success: #b2f6a1;
+    --error: #ffb59e;
+    --info: #fcf9a1;
 }
 
 /* main-styles */
 body {
     font-family: Helvetica, Arial, sans-serif;
     padding: 20px;
+    position: relative;
+    min-height: 100vh;
 }
 
 .btn {
@@ -160,6 +166,9 @@ body {
     margin-top: 20px;
     align-self: center;
 }
+.btn-show--hidden {
+    display: none;
+}
 .btn-show:hover {
     filter: var(--green-filter);
 }
@@ -167,4 +176,97 @@ body {
 .btn-save:hover,
 .btn-edit:hover {
     filter: var(--royalblue-filter);
+}
+
+/* info */
+.info-wrapper {
+    background: rgba(50, 50, 50, 0.5);
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0px;
+    bottom: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Tahoma';
+}
+
+.info {
+    z-index: 1000000;
+    position: fixed;
+    width: 650px;
+    box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+    background-color: wheat;
+    border: 1px solid var(--secondary-lighter);
+    display: block;
+}
+
+.info-header {
+    background-color: pink;
+    padding: 40px;
+    border-bottom: 1px dashed var(--secondary);
+    height: 115px;
+}
+
+.info-header-note {
+    background-color: var(--info);
+}
+
+.info-header-error {
+    background-color: var(--error);
+}
+
+.info-content {
+    color: var(--red);
+    padding: 40px 30px 20px 40px;
+    border-bottom: 1px dashed var(--secondary);
+    line-height: 25px;
+}
+
+.info-content-title {
+    display: block;
+    font-size: 34px;
+    margin-bottom: 25px;
+    line-height: 35px;
+}
+
+.info-content-desc {
+    white-space: pre-line;
+    line-height: 40px;
+    font-size: 24px;
+    display: block;
+}
+
+.info-content-title-note {
+    font-weight: 300;
+}
+
+.info-content-title-error {
+    font-weight: 500;
+}
+
+.info-footer {
+    min-height: 110px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.info-hidden {
+    display: none;
+}
+
+.btn-info {
+    font-size: 30px;
+    font-weight: 500;
+    color: var(--red);
+    border: 1px solid var(--red);
+    padding: 10px 65px;
+}
+
+.btn-info:hover {
+    background-color: transparent;
+    border: 1px solid red;
+    color: red;
 }
