--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -272,6 +272,11 @@ body {
 }
 
 /* loader */
+.loader {
+    display: flex;
+    text-align: center;
+    min-height: 35px;
+}
 
 .loader--hidden {
     display: none;
