--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -25,14 +25,6 @@ body {
     display: contents;
 }
 
-input {
-    padding: 30px var(--cell-padding);
-}
-
-input:focus {
-    outline: 2px solid royalblue;
-}
-
 /* users*/
 .users__wrapper {
     display: flex;
@@ -110,6 +102,7 @@ input:focus {
 }
 
 .user__cell {
+    padding: 30px var(--cell-padding);
     display: flex;
     align-items: center;
     flex: 2;
@@ -126,7 +119,6 @@ input:focus {
 
 .user__cell-gender {
     justify-content: space-around;
-    flex: 1;
 }
 
 .user__cell:last-child {
@@ -301,7 +293,7 @@ input:focus {
     min-height: 35px;
 }
 
-.user__cell-gender:focus-within {
+.user__cell:focus-within {
     outline: 2px solid royalblue;
 }
 
